# OpenSRD

./: ParticleTracking.cpp  ParticleTracking.h  README.md  ReadAndWrite.cpp  ReadAndWrite.h  main.cpp  main.h  minpack.cpp  minpack.hpp  objectTypes.h  settings.xml
libOpenSRD/: CMakeCache.txt  CMakeLists.txt  Calib_CAM1.yml  Calibration  Makefile  Settings_calib_CAM1.xml  cmake_install.cmake  settings.xml
libOpenSRD/INPUT/: Calib_CAM1.yml  Camera_Pose_1.txt  VerticesPoseEstimation_1.txt  VerticesPoseEstimation_CAM1.txt
libOpenSRD/PRE_PROCESS/: Calib_C1.yml  settings.xml  settings_calib.xml
libOpenSRD/RESULTS/: Camera_Pose_1.txt  Coefficients.txt  Errors.txt  TimeSeries_CAM1.txt  coeffs.txt  errors.txt
libOpenSRD/RESULTS/FEATURES_1/: Frame_9.txt
libOpenSRD/src/: Calibration.cpp  NumericalSimulations.cpp  NumericalSimulations.h  ParticleTracking.cpp  ParticleTracking.h  ReadAndWrite.cpp  ReadAndWrite.h  main.cpp  main.h  minpack.cpp  minpack.hpp  objectTypes.h  settings.xml
