cmake_minimum_required(VERSION 2.8)
project( OpenSRD )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp")
file(GLOB SOURCES src/*.cpp)
add_executable( SurfaceReconstruction src/ParticleTracking.cpp src/ReadAndWrite.cpp src/alglibinternal.cpp src/alglibmisc.cpp src/ap.cpp src/dataanalysis.cpp src/diffequations.cpp src/fasttransforms.cpp src/integration.cpp src/interpolation.cpp src/linalg.cpp src/main.cpp src/minpack.cpp src/optimization.cpp src/solvers.cpp src/specialfunctions.cpp src/statistics.cpp  )
add_executable( Calibration src/Calibration.cpp)
target_link_libraries( SurfaceReconstruction ${OpenCV_LIBS} )
target_link_libraries( Calibration ${OpenCV_LIBS} )
